sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:16: error: not found: value nbPos
    for (j <- 0 to nbPos-1)
                   ^